<resources>
    <string name="app_name">Chvf</string>
    <string name="set_password">Set password</string>
    <string name="email_address">Email address</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">password</string>
    <string name="email_address1">Email Address</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_here">Sign UP here</string>
    <string name="reset">RESET</string>
    <string name="enter_your_email_address">enter your email address</string>
</resources>