<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce4ec"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="17dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="@string/email_address1"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="53dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="198dp"
        android:layout_height="21dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="110dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#1565c0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="110dp"
        android:background="#4fc3f7"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="74dp"
        android:text="@string/sign_up_here"
        android:textColor="#1565c0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>