<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce4ec"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="51dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="17dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="25dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="@string/set_password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/conPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <EditText
        android:id="@+id/conPassword"
        android:layout_width="317dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="289dp"
        android:background="#e0e0e0"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="110dp"
        android:background="#4fc3f7"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conPassword" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="62dp"
        android:text="Log in here"
        android:textColor="#1565c0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>